<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_desc" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <Switch
        android:id="@+id/auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_auto" />

    <Switch
        android:id="@+id/network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_network" />

    <Switch
        android:id="@+id/meta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_meta" />

    <Switch
        android:id="@+id/strip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_strip" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sk_resolve_hops" />

    <EditText
        android:id="@+id/hops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/sk_resolve_hopsHint"
        android:inputType="number" />

</LinearLayout>
